tests/cases/errors/parser/stmt_fn2.vnm
fn main) {
  let x = 0;
  let y = 1;
  if (x < y) {
    print "Hello, world!";
  }
  return 0;
}

main();
